LPS-56072 Cleaned build files, except for the test tasks.